--- a/workshop/exercise-06/style.css
+++ b/workshop/exercise-06/style.css
@@ -1,13 +1,41 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .nav {
-    background-color: #383737;
+  background-color: #383737;
 }
 
 .nav-dropdown {
-    color: #fff;
-    text-decoration: none;
-    display: inline-block;
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  line-height: 50px;
+  width: 100px;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  color: white;
+  background: #498bfc;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  z-index: 1;
+}
+
+li {
+  line-height: 25px;
+  padding: 15px 0;
+  display: none;
+  width: 100px;
+}
+
+li:hover {
+  background: #2757ac;
+}
+
+.nav-dropdown:hover li {
+  display: block;
 }
